🔨 Add Biome for formatting and linting

--- a/package.json
+++ b/package.json
@@ -10,12 +10,14 @@
         "build": "npm run type-check && node esbuild.config.js",
         "start": "node dist/index.js",
         "dev": "npm run type-check && node esbuild.config.js && node dist/index.js",
-        "type-check": "tsc --noEmit"
+        "type-check": "tsc --noEmit",
+        "format": "biome check --write ./"
     },
     "keywords": ["cli", "git", "github", "pr", "description", "chatgpt"],
     "author": "Oleg Petrov <fyvfyv@fyvfyv.com>",
     "license": "ISC",
     "devDependencies": {
+        "@biomejs/biome": "^1.9.4",
         "@types/node": "^22.7.6",
         "esbuild": "^0.24.0",
         "typescript": "^5.6.3"
