--- a/package.json
+++ b/package.json
@@ -11,7 +11,9 @@
         "start": "node dist/index.js",
         "dev": "npm run type-check && node esbuild.config.js && node dist/index.js",
         "type-check": "tsc --noEmit",
-        "format": "biome check --write ./"
+        "format": "biome check --write ./",
+        "test": "vitest",
+        "test:watch": "vitest --watch"
     },
     "keywords": [
         "cli",
@@ -27,10 +29,12 @@
         "@biomejs/biome": "^1.9.4",
         "@types/node": "^22.7.6",
         "esbuild": "^0.24.0",
-        "typescript": "^5.6.3"
+        "typescript": "^5.6.3",
+        "vitest": "^2.1.3"
     },
     "dependencies": {
         "chalk": "^5.3.0",
         "simple-git": "^3.27.0"
-    }
+    },
+    "packageManager": "pnpm@9.8.0+sha256.56a9e76b51796ca7f73b85e44cf83712862091f4d498c0ce4d5b7ecdc6ba18f7"
 }
