--- a/biome.json
+++ b/biome.json
@@ -7,7 +7,7 @@
     },
     "files": {
         "ignoreUnknown": false,
-        "ignore": []
+        "ignore": ["node_modules", "dist", ".git", "pnpm-lock.yaml"]
     },
     "formatter": {
         "enabled": true,
