--- a/tsconfig.json
+++ b/tsconfig.json
@@ -7,7 +7,8 @@
         "strict": true,
         "esModuleInterop": true,
         "skipLibCheck": true,
-        "alwaysStrict": false
+        "alwaysStrict": false,
+        "types": ["vitest/globals"]
     },
-    "include": ["src/**/*"]
+    "include": ["src", "vitest.config.ts"]
 }
