--- a/biome.json
+++ b/biome.json
@@ -35,5 +35,17 @@
             "quoteStyle": "single",
             "trailingCommas": "all"
         }
-    }
+    },
+    "overrides": [
+        {
+            "include": ["src/**/*.test.ts"],
+            "linter": {
+                "rules": {
+                    "suspicious": {
+                        "noExplicitAny": "off"
+                    }
+                }
+            }
+        }
+    ]
 }
