--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
         "vitest": "^2.1.3"
     },
     "dependencies": {
+        "@octokit/rest": "^21.0.2",
         "chalk": "^5.3.0",
         "dotenv": "^16.4.5",
         "simple-git": "^3.27.0"
