--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
         "chalk": "^5.3.0",
         "common-tags": "^1.8.2",
         "dotenv": "^16.4.5",
+        "readline": "^1.3.0",
         "simple-git": "^3.27.0"
     },
     "packageManager": "pnpm@9.8.0+sha256.56a9e76b51796ca7f73b85e44cf83712862091f4d498c0ce4d5b7ecdc6ba18f7"
