🔨 Update vitest configuration and script for CJS deprecation fix
- Renamed `vitest.config.ts` to `vitest.config.mts` to fix the [CJS build deprecation warning][1].
- Updated the `test` script to use `vitest --run --silent` for better performance and cleaner output.

[1]: https://vite.dev/guide/troubleshooting.html#vite-cjs-node-api-deprecated

--- a/package.json
+++ b/package.json
@@ -13,8 +13,8 @@
         "type-check": "tsc --noEmit",
         "lint": "biome check --write ./",
         "format": "biome check --fix --unsafe ./",
-        "test": "vitest",
-        "test:watch": "vitest --watch"
+        "test": "vitest --run --silent",
+        "test:watch": "vitest"
     },
     "keywords": ["cli", "git", "github", "pr", "description", "chatgpt"],
     "author": "Oleg Petrov <fyvfyv@fyvfyv.com>",
