--- a/tsconfig.json
+++ b/tsconfig.json
@@ -10,5 +10,5 @@
         "alwaysStrict": false,
         "types": ["vitest/globals"]
     },
-    "include": ["src", "vitest.config.ts"]
+    "include": ["src", "vitest.config.mts"]
 }
