✅♻️ Add missed tests and added coverage calculation
In addition, there is some refactoring for easier testing and removing unnecessary logic.

--- a/biome.json
+++ b/biome.json
@@ -7,7 +7,7 @@
     },
     "files": {
         "ignoreUnknown": false,
-        "ignore": ["node_modules", "dist", ".git", "pnpm-lock.yaml"]
+        "ignore": ["node_modules", "dist", ".git", "pnpm-lock.yaml", "coverage"]
     },
     "formatter": {
         "enabled": true,
