--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
         "lint": "biome check --write ./",
         "format": "biome check --fix --unsafe ./",
         "test": "vitest --run --silent",
-        "test:watch": "vitest"
+        "test:watch": "vitest",
+        "test:coverage": "vitest --coverage ./src"
     },
     "keywords": ["cli", "git", "github", "pr", "description", "chatgpt"],
     "author": "Oleg Petrov <fyvfyv@fyvfyv.com>",
@@ -22,6 +23,7 @@
     "devDependencies": {
         "@biomejs/biome": "^1.9.4",
         "@types/node": "^22.7.6",
+        "@vitest/coverage-v8": "2.1.3",
         "esbuild": "^0.24.0",
         "typescript": "^5.6.3",
         "vitest": "^2.1.3"
