--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
     "name": "prghost",
     "version": "1.0.0",
-    "description": "A CLI tool to auto-fill PR descriptions based on git diff and guidelines",
+    "description": "Tool that auto-generates PR descriptions from git diffs using AI and project guidelines",
     "main": "dist/index.js",
     "bin": {
         "run": "./dist/index.js"
