--- a/package.json
+++ b/package.json
@@ -25,14 +25,7 @@
         "test:watch": "vitest",
         "test:coverage": "vitest --coverage ./src"
     },
-    "keywords": [
-        "cli",
-        "git",
-        "github",
-        "pr",
-        "description",
-        "chatgpt"
-    ],
+    "keywords": ["cli", "git", "github", "pr", "description", "chatgpt"],
     "author": "Oleg Petrov <fyvfyv@fyvfyv.com>",
     "license": "MIT",
     "devDependencies": {
@@ -52,8 +45,6 @@
         "readline": "^1.3.0",
         "simple-git": "^3.27.0"
     },
-    "files": [
-        "dist"
-    ],
+    "files": ["dist"],
     "packageManager": "pnpm@9.12.2+sha512.22721b3a11f81661ae1ec68ce1a7b879425a1ca5b991c975b074ac220b187ce56c708fe5db69f4c962c989452eee76c82877f4ee80f474cebd61ee13461b6228"
 }
